[package]
name = "rac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
rand = "0.8.5"
nix = "0.23.1"
colored = "2.0.0"

[profile.release]
lto = true

[profile.release.build-override]
opt-level = 3
codegen-units = 64